Fixed Header Alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+/* Fix Header alignment issue on biography page */
+*{
+  box-sizing: border-box;
+}
+
 body,
 html {
   margin: 0;
